Fixing some layout issues.

--- a/src-gwt/org/opencms/ade/containerpage/client/ui/css/groupcontainer.css
+++ b/src-gwt/org/opencms/ade/containerpage/client/ui/css/groupcontainer.css
@@ -1,9 +1,3 @@
-.editor{}
-.dialog{
-	width: 460px;
-	border: 1px solid value("constants.css.borderColor");
-	background: value("constants.css.backgroundColorDialog");
-}
 .inputRow{
 	margin: 2px 0;
 	height: 30px;
@@ -16,7 +10,7 @@
 }
 .inputBox{
 	vertical-align: middle;
-	width: 300px;
+	width: 438px;
 }
 .containerMarker{
 	background: value("constants.css.backgroundColorDialog");
